# FreeCADFrontPanelSimulation

./: .gitignore  FPEventDispatcher.py  FPInitialPlacement.py  FPPixelContainer.py  FPSimButton.py  FPSimCommands.py  FPSimDir.py  FPSimDisplay.py  FPSimInit.py  FPSimLED.py  FPSimLinearPotentiometer.py  FPSimRotaryEncoder.py  FPSimRotaryPotentiometer.py  FPSimServer.py  FPSimTouchSurface.py  FPSimulation.py  FPTopologyExporter.py  FPUtils.py  FPWidgetActionCategory.py  FPWidgetFunction.py  FPWidgetInfoExporter.py  FPWidgetTypes.py  InitGui.py  LICENSE  README.md  event-sequence.puml
ClientHelpers/: WidgetCodeGenerator.py
ClientHelpers/c++/: CMakeLists.txt  CallbackContainer.h  CallbackContainer_Spec.h  CallbackIf.h  CallbackIf_Spec.h  CallbackStack.h  FpHal.h  FpInputHandler.h  IncrementHolder.h  ValueChangeHandler.h  ValueContainer.h  ValueContainer_Spec.h  ValueHolder.h  Vector2D.h  Widget.h  WidgetTopology.h  WidgetTopologyContainer.h  WidgetTopology_Spec.h  WidgetTypes.h
ClientHelpers/c++/Common/: CMakeLists.txt
ClientHelpers/c++/Common/Topology/: .gitignore  WidgetCodeGenerator.py
ClientHelpers/c++/Common/UnitTest/: CMakeLists.txt  UT_ValueHolder.cpp
ClientHelpers/c++/FPIOHandlers/: CMakeLists.txt  CallbackStack.h
ClientHelpers/c++/FPIOHandlers/UnitTest/: CMakeLists.txt
ClientHelpers/c++/FPIOHandlers/UnitTest/UT_FpInputHandler/: TestCallbacks.h  WidgetTopology.h
ClientHelpers/c++/FrontPanelIO/: CMakeLists.txt
ClientHelpers/c++/FrontPanelIO/UnitTest/: CMakeLists.txt
ClientHelpers/c++/HAL/: CMakeLists.txt  HALFpSim.cpp  HALFpSim.h
ClientHelpers/c++/Topology/: CMakeLists.txt  ValueHolder.h  Vector2D.h  WidgetTypes.h  Widget_Spec.h
ClientHelpers/c++/Topology/Topology/: WidgetCodeGenerator.py
ClientHelpers/c++/Topology/UnitTest/: UT_WidgetTopologyContainer.cpp
ClientHelpers/c++/UnitTest/: CMakeLists.txt  UT_CallbackStack.cpp  UT_FpInputHandler.cpp  UT_IncrementHolder.cpp  UT_ValueChangeHandler.cpp  UT_WidgetTopologyContainer.cpp
ClientHelpers/c++/UnitTest/UT_FpInputHandler/: TestFpHal.h  UT_FpInputHandler.cpp  WidgetTopology.h
ClientHelpers/python/: FpInputs.py  FpOutputs.py  GrpcClientChannel.py  WidgetIdLabelMap.py
Examples/draw-toy/: draw-toy-app.py  draw-toy-app_raw.py  draw-toy.fcstd  draw-toy.fcstd1
Examples/midi-sequencer/: sequencer.py
demo/: draw-toy.fcstd  draw-toy.fcstd1
grpc/: FPSimulation.proto
grpc/c++/: .gitignore  CMakeLists.txt  FpSimGrpcConfig.cmake  GrpcClient.cpp  GrpcClient.h
grpc/python/: Makefile
icons/: overview.odg
protos/: FPSimulation.proto  Makefile
